@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-28T08:21:45Z",
-  "count_outdated" : 326,
-  "uniques_outdated" : 208,
-  "count" : 353,
+  "timestamp" : "2022-06-28T16:24:17Z",
+  "count_outdated" : 330,
+  "uniques_outdated" : 210,
+  "count" : 355,
   "uniques" : 224,
   "clones" : [
-    {
-      "timestamp": "2022-06-14T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-06-15T00:00:00Z",
       "count": 2,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
