@@ -1,3 +1,10 @@
+2022-06-28T16:24:17Z:
+* notice: last 14d: unq all: 2 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 208 326 / 224 353
+* notice: next accum: outdated-unq outdated-all / unq all: 210 330 / 224 355
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-06-14] / [2022-06-28]
+
 2022-06-28T08:21:45Z:
 * notice: last 14d: unq all: 3 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 208 326 / 223 353
